# silhouette

./: .gitignore  README.md  project_info.txt  pyproject.toml  pyproject.toml.bak
src/silhouette/: cli.py  code_processor.py  cst_transformers.py  gpt_interface.py  transformer.py
src/silhouette/utils/: config.py  cst_helpers.py
tests/: test_cli.py  test_code_processor.py  test_cst_helpers.py  test_cst_transformers.py  test_transformer.py
